# witch

./: .gitattributes  .gitmodules  device_grant.sh  oauth.sh
godot/: .gitignore  default_theme.tres  export_presets.cfg  icon.svg.import  project.godot
godot/audio/: dont.wav.import  listen.wav.import  notif.wav.import  raid.tres  sub.tres
godot/code/: image_cache.gd  image_cache.gd.uid  rust  rust.gdextension  rust.gdextension.uid  sound_bank.gd  sound_bank.gd.uid  sound_bank_player.gd  sound_bank_player.gd.uid  twitch_image_cache.gd
godot/fonts/: FantasqueSansMono-Bold.otf.import  FantasqueSansMono-BoldItalic.otf.import  FantasqueSansMono-Italic.otf.import  FantasqueSansMono-Regular.otf.import
godot/gdext/: rust  rust.gdextension
godot/scenes/: auto_destruct.gd  bit_particles.tscn  emote_particles.tscn  main.tscn  message.gd  notice.gd  notice_bits_badge.gd  notice_custom.gd  notice_raid.gd  notice_sub.gd  notice_sub_gift.gd  notice_sub_mystery_gift.gd  test.gd  (+12 more)
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  witch_irc.rs
rust/src/witch/: helper.rs  mod.rs  witch_badge.rs  witch_clear_chat.rs  witch_clear_chat_message.rs  witch_clear_message.rs  witch_emote.rs  witch_global_user_state.rs  witch_global_user_state_message.rs  witch_irc.rs  witch_irc_message.rs  witch_join_message.rs  witch_notice_message.rs  witch_part_message.rs  witch_ping_message.rs  witch_pong_message.rs  witch_privmsg_message.rs  witch_reconnect_message.rs  witch_room_state_message.rs  witch_user_basics.rs  witch_user_notice_message.rs  witch_user_state_message.rs  witch_whisper_message.rs
(+101 files in other folders)
