[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.77"
chrono = "0.4.33"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
tokio = { version = "1", features = ["full"] }
twitch-irc = { version = "5.0.1", features = ["refreshing-token-rustls-native-roots"] }
tracing-subscriber = "0.3.18"